# ConsoleIF

./: CMakeLists.txt  Makefile  README.md  main.cpp
Includes/: CMakeLists.txt
Includes/ConsoleIf/: CMakeLists.txt  ConsoleIf.h
Includes/Result/: CMakeLists.txt  Result.h
Includes/Utils/: CMakeLists.txt  Utils.h
cmake/: AddGitSubmodule.cmake
configured/: config.h.in
debug_tool/: debug_tool.gdb
src/: CMakeLists.txt
src/ConsoleIf/: CMakeLists.txt  ConsoleIf.cpp
src/Utils/: CMakeLists.txt  Utils.cpp
tests/: CMakeLists.txt
tests/ConsoleIf/: CMakeLists.txt  consoleif_tests.cpp
